--- a/css/style.css
+++ b/css/style.css
@@ -107,6 +107,11 @@ body {
   border-radius: 10px;
 }
 
+.field-reset {
+  background-color: transparent;
+  border: none;
+}
+
 /* header */
 .phone {
   font-size: 20px;
@@ -230,6 +235,17 @@ body {
   margin-bottom: 47px;
 }
 
+.right-offer-title {
+  font-size: 60px;
+  line-height: 60px;
+  color: #fff;
+
+}
+
+.right-offer-price {
+  font-size: 30px;
+}
+
 .more-wrap {
   margin: 0;
 }
@@ -245,7 +261,7 @@ body {
 }
 
 /* about */
-.left-block {
+.about-left-block {
   max-width: 888px;
 }
 
@@ -266,8 +282,8 @@ body {
   max-width: 573px;
   margin-bottom: 24px;
   background-color: #fff;
-  border-top: 0px solid;
-  border-radius: 15px 15px 0 0;
+  border: 0px solid;
+  border-radius: 15px;
   overflow: hidden;
 }
 
@@ -448,7 +464,7 @@ body {
   padding-bottom: 27px;
   background-image: url('../img/rocks.jpg');
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
 }
 
 .empty-card-link {
@@ -460,4 +476,173 @@ body {
   background-repeat: no-repeat;
   background-position: center right;
   padding-right: 20px;
+}
+
+/* tour */
+.tour-container {
+  padding: 45px;
+  padding-left: 40px;
+  background-color: #e9e9e9;
+  border-radius: 15px;
+}
+
+.form {
+  padding: 31px 28px 30px;
+  background-color: #fff;
+}
+
+.form-desc {
+  display: block;
+  font-size: 12px;
+  line-height: 12px;
+  margin-bottom: 15px;
+}
+
+ .field {
+  font-size: 16px;
+  line-height: 16px;
+ }
+
+ .num-field {
+  border-bottom: 1px solid #e9e9e9;
+ }
+
+.label:not(:last-child) {
+  margin-right: 41px;
+}
+
+.label:last-child {
+  margin-right: 51px;
+}
+
+/* contacts */
+.contacts {
+  margin-bottom: 40px;
+}
+
+.block-contacts {
+  background-color: #fff;
+  border-radius: 15px;
+  padding: 45px;
+}
+
+.left-block {
+  max-width: 375px;
+}
+
+.reception-image {
+  border-radius: 10px;
+  height: 100%;
+}
+
+.right-block {
+  margin-left: auto;
+}
+
+.contacts-item-title {
+  min-width: 98px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 20px;
+  margin: 0;
+  margin-right: 47px;
+}
+
+.contacts-item {
+  padding-bottom: 23px;
+  border-bottom: 1px solid #e9e9e9;
+  margin-bottom: 25px;
+}
+
+.contacts-item:last-child {
+  margin-bottom: 45px;
+}
+
+.contacts-info {
+  max-width: 230px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+}
+
+.contacts-address {
+  font-style: normal;
+}
+
+.contacts-item-phone {
+  color: #CC9933;
+}
+
+.contacts-item-email {
+  display: block;
+  color: #CC9933;
+}
+
+.contacts-button {
+  padding: 27px 30px;
+}
+
+/* footer */
+.footer {
+  color: #fff;
+  margin-bottom: 30px;
+}
+
+.footer-container {
+  padding: 45px;
+  background-color: #333;
+  border-radius: 15px;
+  background-image: url('../img/footer-logo.svg');
+  background-repeat: no-repeat;
+  background-position: bottom right 176px;
+}
+
+.footer-left {
+  max-width: 302px;
+  margin-right: 125px;
+}
+
+.footer-center {
+  flex-direction: column;
+  gap: 15px;
+  max-width: 360px;
+}
+
+.footer-right {
+  margin-left: auto;
+}
+
+.footer-paragraph {
+  font-size: 16px;
+  line-height: 31px;
+  margin: 0;
+  margin-bottom: 37px;
+}
+
+.footer-address {
+  font-size: 16px;
+  font-style: normal;
+  line-height: 30px;
+}
+
+.footer-link {
+  display: block;
+  font-size: 16px;
+  line-height: 24px;
+  color: #c93;
+}
+
+.footer-email {
+  display: block;
+  font-size: 16px;
+  line-height: 24px;
+  color: #c93;
+}
+
+.social-network-item:not(:last-child) {
+  margin-bottom: 20px;
+}
+
+.agreement {
+  color: #c93;
 }
