--- a/css/style.css
+++ b/css/style.css
@@ -489,6 +489,7 @@ body {
 .form {
   padding: 31px 28px 30px;
   background-color: #fff;
+  border-radius: 15px;
 }
 
 .form-desc {
@@ -533,6 +534,7 @@ body {
 .reception-image {
   border-radius: 10px;
   height: 100%;
+  object-fit: cover;
 }
 
 .right-block {
@@ -626,23 +628,45 @@ body {
 }
 
 .footer-link {
-  display: block;
+  display: inline-block;
   font-size: 16px;
   line-height: 24px;
   color: #c93;
 }
 
-.footer-email {
-  display: block;
-  font-size: 16px;
-  line-height: 24px;
-  color: #c93;
+.social-networks {
+  height: 115px;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .social-network-item:not(:last-child) {
   margin-bottom: 20px;
 }
 
+.tripadvisor {
+  background-image: url("../img/tripadvisor.svg");
+}
+
+.ok {
+  background-image: url("../img/ok.svg");
+}
+
+.vkontakte {
+  background-image: url("../img/vkontakte.svg");
+}
+
+.social-network {
+  padding: 5px 13px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center center;
+}
+
 .agreement {
   color: #c93;
+}
+
+.footer-link-wrap {
+  display: block;
 }
