--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,12 @@ html {
   box-sizing: border-box;
 }
 
+:root {
+  --clickable-color: #CC9933;
+  --link-hover: #F0BF5F;
+  --clicable-active: #A47312;
+}
+
 *,
 *::before,
 *::after {
@@ -101,15 +107,68 @@ body {
 }
 
 .btn {
-  color: #cc9933;
+  color: var(--clickable-color);
   padding: 13px 20px;
-  border: 1px solid #cc9933;
+  border: 1px solid var(--clickable-color);
   border-radius: 10px;
+  transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
+}
+
+.btn:focus {
+  color: #fff;
+  background-color: var(--clickable-color);
+}
+
+.btn:hover {
+  color: #fff;
+  background-color: var(--clickable-color);
+}
+
+.btn:active {
+  color: #fff;
+  background-color: var(--clicable-active);
 }
 
 .field-reset {
   background-color: transparent;
   border: none;
+}
+
+.link {
+  transition: color 0.3s ease-in-out;
+}
+
+.link:focus {
+  outline-offset: 5px;
+  outline: 1px solid var(--clickable-color);
+}
+
+.link:hover {
+  color: var(--link-hover);
+}
+
+.link:active {
+  outline: none;
+  color: var(--clicable-active);
+}
+
+.link-gray {
+  transition: color 0.3s ease-in-out;
+}
+
+.link-gray:focus {
+  outline-offset: 5px;
+  outline: 1px solid var(--clickable-color);
+  color: var(--clickable-color);
+}
+
+.link-gray:hover {
+  color: var(--clickable-color);
+}
+
+.link-gray:active {
+  outline: none;
+  color: var(--clicable-active);
 }
 
 /* header */
@@ -135,16 +194,39 @@ body {
   border-radius: 15px;
 }
 
+.header__login {
+  display: flex;
+  margin-left: auto;
+}
+
+
 .signin {
+  position: relative;
   margin-left: auto;
   font-size: 16px;
   font-weight: 400;
   line-height: 16px;
   color: #c93;
-  background-image: url('../img/sign-in.svg');
   background-repeat: no-repeat;
   background-position: top left;
-  padding-left: 28px;
+}
+
+.signin svg {
+  margin-right: 3px;
+  fill: var(--clickable-color);
+  transition: fill 0.3s ease-in-out;
+}
+
+.signin:focus svg {
+  fill: var(--clickable-color);
+}
+
+.signin:hover svg {
+  fill: var(--link-hover);
+}
+
+.signin:active svg {
+  fill: var(--clicable-active);
 }
 
 .nav-list {
@@ -199,11 +281,11 @@ body {
 }
 
 .left-top-article {
-  background-image: url("../img/top-left.jpg");
+  background: linear-gradient(90deg, rgba(48, 64, 89, 0.84) -2.9%, rgba(53, 65, 83, 0) 65.7%), url("../img/top-left.jpg");
 }
 
 .left-bottom-article {
-  background-image: url("../img/bottom-left.jpg");
+  background-image: linear-gradient(90deg, rgba(48, 64, 89, 0.84) -2.9%, rgba(53, 65, 83, 0) 65.7%), url("../img/bottom-left.jpg");
 }
 
 .right-article {
@@ -211,6 +293,7 @@ body {
 }
 
 .left-article {
+  position: relative;
   flex-basis: 50%;
 }
 
@@ -253,7 +336,7 @@ body {
 .more {
   font-size: 16px;
   line-height: 16px;
-  color: #f0bf5f;
+  color: var(--link-hover);
   padding-right: 15px;
   background-image: url('../img/more.svg');
   background-repeat: no-repeat;
@@ -459,6 +542,8 @@ body {
 }
 
 .empty-card {
+  position: relative;
+  min-height: 440px;
   align-items: flex-end;
   justify-content: center;
   padding-bottom: 27px;
@@ -476,6 +561,15 @@ body {
   background-repeat: no-repeat;
   background-position: center right;
   padding-right: 20px;
+}
+
+.empty-card-link:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
 }
 
 /* tour */
@@ -572,12 +666,12 @@ body {
 }
 
 .contacts-item-phone {
-  color: #CC9933;
+  color: var(--clickable-color);
 }
 
 .contacts-item-email {
   display: block;
-  color: #CC9933;
+  color: var(--clickable-color);
 }
 
 .contacts-button {
@@ -644,23 +738,27 @@ body {
   margin-bottom: 20px;
 }
 
-.tripadvisor {
-  background-image: url("../img/tripadvisor.svg");
-}
-
-.ok {
-  background-image: url("../img/ok.svg");
-}
-
-.vkontakte {
-  background-image: url("../img/vkontakte.svg");
-}
-
 .social-network {
-  padding: 5px 13px;
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center center;
+}
+
+.social-network svg {
+  fill: #999999;
+  transition: fill 0.3s ease-in-out;
+}
+
+.social-network:focus svg {
+  fill: var(--clickable-color);
+}
+
+.social-network svg:hover {
+  fill: var(--clickable-color);
+}
+
+.social-network svg:active {
+  fill: var(--clicable-active);
 }
 
 .agreement {
