--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,38 @@ img {
   color: #E1670E;
   text-decoration-color: #E1670E;
 }
+.header__search-btn {
+  border: none;
+  background-color: transparent;
+  padding: 0;
+  cursor: pointer;
+  transition: transform .3s ease-in-out;
+}
 
+.header__search-btn rect {
+  transition: fill .3s ease-in-out;
+}
+
+.header__search-btn path {
+  transition: stroke .3s ease-in-out;
+}
+
+.header__search-btn:focus-visible {
+  outline: 2px solid var(--btn-color);
+  outline-offset: 4px;
+}
+
+.header__search-btn:hover rect{
+  fill: var(--btn-color);
+}
+
+.header__search-btn:hover path{
+  stroke: var(--btn-color);
+}
+
+.search-form {
+  display: none;
+}
 
 /* hero */
 .container__wrapper {
