--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,6 @@ img {
 
 .header__container {
   position: relative;
-  max-width: 1920px;
   display: flex;
   align-items: center;
   padding: 14px 75px;
@@ -119,7 +118,8 @@ img {
   color: #E1670E;
   text-decoration-color: #E1670E;
 }
-.header__search-btn {
+
+.search-btn {
   border: none;
   background-color: transparent;
   padding: 0;
@@ -127,29 +127,106 @@ img {
   transition: transform .3s ease-in-out;
 }
 
-.header__search-btn rect {
+.search-btn rect {
   transition: fill .3s ease-in-out;
 }
 
-.header__search-btn path {
+.search-btn path {
   transition: stroke .3s ease-in-out;
 }
 
-.header__search-btn:focus-visible {
+.search-btn:focus-visible {
   outline: 2px solid var(--btn-color);
   outline-offset: 4px;
 }
 
-.header__search-btn:hover rect{
+.search-btn:hover rect{
   fill: var(--btn-color);
 }
 
-.header__search-btn:hover path{
+.search-btn:hover path{
   stroke: var(--btn-color);
 }
 
 .search-form {
-  display: none;
+  position: absolute;
+  right: 75px;
+  top: -100px;
+  opacity: 0;
+
+  display: flex;
+  justify-content: flex-end;
+
+  border: none;
+  padding: 16px 0 27px 32px;
+  width: 30vw;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.12);
+  border-radius: 16px;
+  background-color: #fff;
+
+  transition: opacity .3s ease-in-out, top .3s ease-in-out;
+}
+
+.search-form_active {
+  opacity: 1;
+  top: 14px;
+}
+
+.search-form__input {
+  border: none;
+  width: 100%;
+
+  border-bottom: 1px solid #DADADA;
+}
+
+.search-form__input:focus {
+  outline: none;
+  border-color: var(--btn-color);
+}
+
+.search-form__close-btn {
+  border: none;
+  background-color: #fff;
+  padding: 0;
+  margin-right: 17px;
+  cursor: pointer;
+}
+
+.search-form__search-btn {
+  border: none;
+  background-color: #fff;
+  padding: 0;
+  margin-right: 20px;
+  cursor: pointer;
+}
+
+.search-form__close-btn:focus-visible {
+  outline: 2px solid var(--btn-color);
+  outline-offset: 4px;
+}
+
+.search-form__close-btn:hover rect {
+  fill: var(--btn-color);
+}
+
+.search-form__close-btn:hover circle {
+  stroke: var(--btn-color);
+}
+
+.search-form__close-btn:active rect {
+  fill: var(--base-color);
+}
+
+.search-form__close-btn:active circle {
+  stroke: var(--base-color);
+}
+
+.search-form__close-btn circle {
+  transition: stroke .3s ease-in-out;
+}
+
+.search-form__close-btn rect {
+  transition: fill .3s ease-in-out;
 }
 
 /* hero */
